[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/spawner_tilemap/editor/single_tile_stylebox.tres" type="StyleBox" id=2]
[ext_resource path="res://addons/spawner_tilemap/editor/tile_to_scene_row_test.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0.0980392, 0.113725, 0.152941, 1 )
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[node name="TileToSceneRowTest" type="HFlowContainer"]
margin_right = 535.0
margin_bottom = 130.0
mouse_filter = 1
custom_constants/hseparation = 10
script = ExtResource( 3 )

[node name="TileTexture" type="NinePatchRect" parent="."]
margin_right = 90.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 32, 32 )
__meta__ = {
"_editor_description_": ""
}

[node name="DataContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_right = 535.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="TileData" type="HFlowContainer" parent="DataContainer"]
margin_right = 435.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 21 )
size_flags_horizontal = 3

[node name="IdLabel" type="Label" parent="DataContainer/TileData"]
margin_right = 21.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 4 )
text = "ID"

[node name="IdValueLabel" type="Label" parent="DataContainer/TileData"]
margin_left = 25.0
margin_right = 65.0
margin_bottom = 16.0
hint_tooltip = "tile_id: 1000"
mouse_filter = 1
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.223529, 0.223529, 0.223529, 1 )
custom_styles/normal = SubResource( 3 )
text = "1000"
align = 2

[node name="Control" type="Control" parent="DataContainer/TileData"]
margin_left = 69.0
margin_right = 347.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="TileModeLabel" type="Label" parent="DataContainer/TileData"]
margin_left = 351.0
margin_right = 435.0
margin_bottom = 16.0
mouse_filter = 1
size_flags_vertical = 2
custom_colors/font_color = Color( 0.788235, 0.811765, 0.831373, 1 )
custom_styles/normal = ExtResource( 2 )
text = "SINGLE TILE"
align = 2

[node name="SceneDataAndSettings" type="HFlowContainer" parent="DataContainer"]
margin_top = 26.0
margin_right = 435.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="SceneNameLabel" type="Label" parent="DataContainer/SceneDataAndSettings"]
margin_top = 3.0
margin_right = 419.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Scene: PackedScene.tscn"
valign = 1

[node name="SceneSettingsButton" type="Button" parent="DataContainer/SceneDataAndSettings"]
margin_left = 423.0
margin_right = 435.0
margin_bottom = 20.0
hint_tooltip = "Change the settings for this scene to add custom data or change it's spawning process"
